--- a/package.xml
+++ b/package.xml
@@ -67,7 +67,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-
+  <exec_depend>joint_state_publisher_gui</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
